[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
version = "1.7.0"
name = "crabpy"
readme = "README.md"
authors = [
    { name = "Flanders Heritage Agency", email = "ict@onroerenderfgoed.be" },
]
license = {file = "LICENSE"}
description = "Interact with geographical webservices by Informatie Vlaanderen."
requires-python = ">=3.10,<3.13"
keywords = ["web", "pyramid", "wsgi", "crabpy", "CAPAKEY", "AGIV"]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Developers",
        "Natural Language :: English",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
]
dependencies = [
    "suds-py3>=1.4.4.1",
    "dogpile.cache",
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "responses==0.25.3",
    "flake8==7.1.1",
    "flake8-bugbear==24.8.19",
    "flake8-import-order==0.18.2",
    "black==24.10.0",
    "uv==0.4.20",
    "coveralls==4.0.1",
    "pre-commit==4.0.1",
]

[project.urls]
Repository = "https://github.com/OnroerendErfgoed/crabpy.git"
Issues = "https://github.com/OnroerendErfgoed/crabpy/issues"
Changelog = "https://github.com/OnroerendErfgoed/crabpy/blob/master/CHANGES.rst"

[project.entry-points."paste.app_factory"]
main = "crabpy:main"

[tool.hatch.build.targets.wheel]
# In the wheel we want to have crabpy in the root as
# python modules.
packages = [
    "/crabpy",
]
